<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/sign_up_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/sign_up_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_signup_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:contentDescription="@string/img_courbe"
                android:src="@drawable/ic_mycardiopad"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Passage SignUp Host"
                android:id="@+id/btn_passage_signuphost" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/nom"
                    android:textColorHint="@color/colorBlue" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/pr_nom"
                    android:textColorHint="@color/colorBlue" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorBlue"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorBlue"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_CNCI"
                    style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:text="Fichier CNCI"
                    android:background="@color/colorWhite"
                    android:textColor="@color/colorRed"
                    android:shadowColor="@color/colorRed"
                    android:layout_weight="0.2" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageCNCI"
                    android:layout_weight="0.8"
                    android:maxHeight="100dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_EE"
                    style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:text="Epreuve Effort"
                    android:background="@color/colorWhite"
                    android:textColor="@color/colorRed"
                    android:shadowColor="@color/colorRed"
                    android:layout_weight="0.2" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageEE"
                    android:layout_weight="0.8"
                    android:maxHeight="100dp" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_up"
                android:background="@color/colorWhite"
                android:textColor="@color/colorRed"
                android:shadowColor="@color/colorRed" />

            <TextView
                android:id="@+id/link_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:textColor="@color/colorRed"
                android:gravity="center"
                android:singleLine="true"
                android:layout_marginTop="16dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/imageCROP"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
