<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:focusable="true"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            >



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/CameraCapture"
                    android:layout_weight="0.6">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.8">


                        <SurfaceView android:id="@+id/surface_camera"
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true">
                        </SurfaceView>

                        <ImageView
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:id="@+id/imageViewCamera"
                            android:scaleType="centerCrop"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/ic_account_circle_black_48dp" />

                        <ImageView
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:id="@+id/imageViewFixe"
                            android:layout_centerHorizontal="true"
                            android:background="@drawable/circle_surface_border_blanc"
                            android:layout_alignParentTop="false" />

                    </RelativeLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal">

                        <Switch
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/switchCamera"
                            android:layout_alignParentTop="false"
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentBottom="true"
                            android:layout_above="@+id/imageViewFixe"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center_horizontal" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal">

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:backgroundTint="@color/MockupBlueBack"
                    android:src="@drawable/ic_camera_alt_white_24dp"
                    android:id="@+id/btnPhoto" />


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/GrpView">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                          >

                            <AutoCompleteTextView
                                android:id="@+id/editNom"
                                android:inputType="textCapSentences"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/nom"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColorHint="@color/colorBlue"/>
                        </android.support.design.widget.TextInputLayout>


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                          >

                            <AutoCompleteTextView
                                android:id="@+id/editPrenom"
                                android:inputType="textCapSentences"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/pr_nom"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColorHint="@color/colorBlue"/>
                        </android.support.design.widget.TextInputLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="5dp" >

                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_gravity="center_horizontal"
                                android:gravity="center" >

                            </LinearLayout>

                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center" >

                            </LinearLayout>
                        </LinearLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp" >

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/editEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/adresse_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorHint="@color/colorBlue"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <AutoCompleteTextView
                        android:id="@+id/editPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mot_de_passe"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorHint="@color/colorBlue"/>
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:layout_gravity="center">

                    <AutoCompleteTextView
                        android:id="@+id/editPoids"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/poids_kg"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorHint="@color/colorBlue"
                        android:inputType="phone"/>
                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/femme"
                    android:id="@+id/chkFemme"
                    android:layout_gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:layout_gravity="center">

                    <AutoCompleteTextView
                        android:id="@+id/editTaille"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/taille_cm"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorHint="@color/colorBlue"
                        android:inputType="phone"/>

                    </android.support.design.widget.TextInputLayout>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homme"
                android:id="@+id/chkHomme"
                android:layout_gravity="center" />
                </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/mTextDate"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="Date de naissance"
                    android:id="@+id/btnBirth"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/boutton_change"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</LinearLayout>